// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert displays a success message 1`] = `
<DocumentFragment>
  <div
    class="alert success"
  >
    Success!!!
  </div>
</DocumentFragment>
`;

exports[`Alert displays an error message 1`] = `
<DocumentFragment>
  <div
    class="alert error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert does not render component if there is no message 1`] = `<DocumentFragment />`;

exports[`Alert renders correctly to match the Alert snapshot 1`] = `<DocumentFragment />`;
